<resources>
    <string name="app_name">SemanaDos</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Télefono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción del contacto</string>
    <string name="datos">Siguiente</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="editar">Editar Datos</string>
    <string name="confirmar">Confirmar Datos</string>
    <string name="title_activity_confirmar_datos">ConfirmarDatos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>